--- a/angular.json
+++ b/angular.json
@@ -24,8 +24,9 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css"
+              
+              "src/styles.css",
+              "src/theme.scss"
             ],
             "scripts": []
           },
@@ -90,8 +91,8 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css"
+              "src/styles.css",
+              "src/theme.scss"
             ],
             "scripts": []
           }
